# document_check_service

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.mimocode/: .cron-lock
.mimocode/plans/: 1783518284032-sunny-garden.md
alembic/: env.py
alembic/versions/: bfdfcbd67646_all_tables.py
app/: main.py
app/api/: auth.py  checks.py
app/core/: config.py  storage.py
app/models/: __init__.py  check.py  user.py
app/repositories/: check_repository.py
app/schemas/: check.py
app/services/: auth.py  check_service.py  classifier.py  status_resolver.py  validator.py
docs/compose/plans/: 2026-07-08-document-check-service.md
docs/compose/reports/: document-check-service.md
test_files/: test.sh  unknown_document.txt  договор_бракованный.txt  счет_фактура.docx
tests/: conftest.py  test_api.py  test_classifier.py  test_status_resolver.py  test_validator.py
